Build v 0.96 Adding sendMessage configuration on MessengerUtils Debug major part's of code

--- a/src/main/resources/lang/en.properties
+++ b/src/main/resources/lang/en.properties
@@ -10,91 +10,120 @@ modo_chat = &7&l{ &9ModoChat &8(&6{0}&8)&7&l} &9{1} : &f{2}
 modo_chat_prefix = >
 no_console_cmd = &e/<command> &care reserved to players!
 no_console_cmd_without_args = &e/<command> &cwithout &e<player> &care reserved to players!
-not_a_player = &e{0} &caren''t player / has not connected!
-no_perm = &cYou doesn''t have permission to do this!
-no_perm_to_other = &cYou doesn''t have permission to do this on another player!
+not_a_player = &e{0} &caren't player / has not connected!
+no_perm = &cYou doesn't have permission to do this!
+no_perm_to_other = &cYou doesn't have permission to do this on another player!
 no_args = &e/<command> &cneed some arguments!\n&e- /<command> {0}
 actionbosstitle_sent_to_all = &aYour message has sent to everyone!
 actionbosstitle_sent_to_other = &aYour message has sent to &e{0}&a!
+help_afk = &7Manage your AFK mode
 afk_enabled_broadcast = &3{0} &7are now AFK
-afk_disabled_broadcast = &3{0} &7aren''t AFK
-afk_enabled_self = &7You''re AFK
-afk_disabled_self = &7You''re not AFK
+afk_disabled_broadcast = &3{0} &7aren't AFK
+afk_enabled_self = &7You're AFK
+afk_disabled_self = &7You're not AFK
+help_alert = &7Send alert messages
 alert_prefix = &c&l-&4&l{ &f&lAlert &4&l}&c&l-
 alert_sent = &7Your message has been sent.
-ban_prefix = &6Multi&5Commands &8> &cYou''ve been banned for: \n{0}
+help_ban = &7Ban players
+ban_prefix = &6Multi&5Commands &8> &cYou've been banned for: \n{0}
+help_broadcast = &7Send broadcast messages
 broadcast_prefix = &3&l-&9&l{ &6Multi&5CMDS &9&l}&3&l-
 broadcast_sent = &7Your message has been sent.
+help_clear = &7Clear your inventory
 clear_self = &7Your inventory has been cleared!
 clear_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &ehas clear your inventory!
-clear_admin =&3{0}''s &7inventory has been cleared!
+clear_admin =&3{0}'s &7inventory has been cleared!
+help_craft = &7Open portable workbench
 death_message = &3{0} &7died!
-death_message_loc = &7You''re dead on &e{0}&7!
+death_message_loc = &7You're dead on &e{0}&7!
+help_economy = &7Manage economy system 
 economy_balance = &aYou have &e{0}$ &a!
-economy_balance_other = &e{0}''s &ahave &e{0}$&a!
+economy_balance_other = &e{0}'s &ahave &e{0}$&a!
 economy_pay_sender = &aYou sent &d{0}$ &ato &b{1}&a!
 economy_pay_receiver = &aYou received &d{0}$ &afrom&b{1}&a!\n &aNow you have &e{2}$
-economy_bank_balance = &e{0}''s &abank have &e{1}$&a!
-economy_bank_created = &e{0}''s &abank have been created!
-economy_bank_deposit = &7You''ve &adeposit &e{0}$ &7on &d{1}''s &7bank!
-economy_bank_reset = &7You''ve &creset &7&d{0}''s &7bank!
-economy_bank_withdraw = &7You''ve &cwithdrawn &e{0}$ &7from &d{1}''s &7bank!
-economy_gave = &7You &agave &e{0}$ &7on &e{1}''s &7bag!
-economy_withdraw = &7You''ve &cwithdrawn &e{0}$ &7on &e{1}''s &7bag!
-economy_reset = &7You''ve &creset &e{0}''s &7bag!
-economy_set = &7You''ve &aset &e{0}$ &7on &e{1}''s &7bag!
+economy_bank_balance = &e{0}'s &abank have &e{1}$&a!
+economy_bank_created = &e{0}'s &abank have been created!
+economy_bank_deposit = &7You've &adeposit &e{0}$ &7on &d{1}'s &7bank!
+economy_bank_reset = &7You've &creset &7&d{0}'s &7bank!
+economy_bank_withdraw = &7You've &cwithdrawn &e{0}$ &7from &d{1}'s &7bank!
+economy_gave = &7You &agave &e{0}$ &7on &e{1}'s &7bag!
+economy_withdraw = &7You've &cwithdrawn &e{0}$ &7on &e{1}''s &7bag!
+economy_reset = &7You've &creset &e{0}'s &7bag!
+economy_set = &7You've &aset &e{0}$ &7on &e{1}'s &7bag!
+help_enderchest = &7Open your enderchest
 enderchest_opened_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &eopened your enderchest!
-feed_self_done = &7You''ve been &afed&7!
-feed_self_already = &7You''re already fed!
+help_feed = &7Fed yourself
+feed_self_done = &7You've been &afed&7!
+feed_self_already = &7You're already fed!
 feed_admin = &7You &afed &3{0}&7!
 feed_admin_already = &3{0} &ealready fed!
 feed_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &afed &eyou!
+help_fly = &7Manage your fly-mode
 fly_enabled_self = &7Your &6Fly-mode &7has been toggle &aON&7!
 fly_disabled_self = &7Your &6Fly-mode &7has been toggle &cOFF&7!
-fly_enabled_admin = &3{0}''s &6Fly-mode &7has been toggle &aON&7!
-fly_disabled_admin = &3{0}''s &6Fly-mode &7has been toggle &cOFF&7!
+fly_enabled_admin = &3{0}'s &6Fly-mode &7has been toggle &aON&7!
+fly_disabled_admin = &3{0}'s &6Fly-mode &7has been toggle &cOFF&7!
 fly_enabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &aON &eyour &6Fly_mode&e!
 fly_disabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &cOFF &eyour &6Fly_mode&e!
-freeze_enabled_by_admin = &6Multi&5Commands &8> &eYou''ve been  &cfroze &eby an &cadministrator&e!
-freeze_disabled_by_admin = &6Multi&5Commands &8> &eYou''ve been &afreed &eby an &cadministrator&e!
+help_freeze = &7Froze players
+freeze_enabled_by_admin = &6Multi&5Commands &8> &eYou've been &cfroze &eby an &cadministrator&e!
+freeze_disabled_by_admin = &6Multi&5Commands &8> &eYou've been &afreed &eby an &cadministrator&e!
 freeze_enabled_admin = &7You add &3{0} &7to &bfrozen &7players!
 freeze_disabled_admin = &7You remove &3{0} &7to &bfrozen &7players!
-freeze_break_block = &cYou can''t break blocks when you''re &efrozen&c!
-freeze_chat = &cYou can''t use chat when you''re &efrozen&c!
-freeze_drop_item = &cYou can''t drop items when you''re &efrozen&c!
-freeze_move = &cYou can''t move when you''re &efrozen&c!
-freeze_pickup_item = &cYou can''t pickup items when you''re &efrozen&c!
-freeze_place = &cYou can''t place blocks when you''re &efrozen&c!
-furnace_error = &e{0} &ccan''t be smelted!
-furnace_done = &aYou''ve smelt &e{0}&a.
+freeze_break_block = &cYou can't break blocks when you're &efrozen&c!
+freeze_chat = &cYou can't use chat when you're &efrozen&c!
+freeze_drop_item = &cYou can't drop items when you're &efrozen&c!
+freeze_move = &cYou can't move when you're &efrozen&c!
+freeze_pickup_item = &cYou can't pickup items when you're &efrozen&c!
+freeze_place = &cYou can't place blocks when you're &efrozen&c!
+help_furnace = &7Smelt ressources
+furnace_error = &e{0} &ccan't be smelted!
+furnace_done = &aYou've smelt &e{0}&a.
+help_gamemode = &7Manage your gamemode
 gamemode_self = &7Your &6Gamemode &7has been set to &d{0}&7!
-gamemode_admin = &3{0}''s &6Gamemode &7has been set to &d{1}&7!
+gamemode_admin = &3{0}'s &6Gamemode &7has been set to &d{1}&7!
 gamemode_by_admin = &6Multi&5Commands &8> &eYour &6Gamemode &ehas been set to &d{0} &eby an &cadministrator&e!
+help_god = &7Manage your god-mode
 god_enabled_self = &7Your &6God-mode &7has been toggle &aON&7!
 god_disabled_self = &7Your &6God-mode&7has been toggle &cOFF&7!
-god_enabled_admin = &3{0}''s &6God-mode &7has been toggle &aON&7!
-god_disabled_admin = &3{0}''s &6God-mode &7has been toggle &cOFF&7!
+god_enabled_admin = &3{0}'s &6God-mode &7has been toggle &aON&7!
+god_disabled_admin = &3{0}'s &6God-mode &7has been toggle &cOFF&7!
 god_enabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &aON &eyour &6God-mode&e!
 god_disabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &cOFF &eyour &6God-mode&e!
+help_helpop = &7Send messages to staff members
 helpop_sent = &eYour message has been sent to online &c&lAdministrators&e!
+helpop_format = &c[Admin Help] &7{0} &8: &f{1}
 helpop_no_admins = &cSorry but any administrators are online! Retry later.
-heal_self = &7You''ve been &ahealed&7!
-heal_self_already = &7You''re already healed!
-heal_admin = &7You''ve &ahealed &3{0}&7!
+help_heal = &7Heal you
+heal_self = &7You've been &ahealed&7!
+heal_self_already = &7You're already healed!
+heal_admin = &7You've &ahealed &3{0}&7!
 heal_admin_already = &3{0} &7already healed!
 heal_by_admin = &6Multi&5Commands &8> &eAn &cadministrator&e &aheal&e you!
-invsee_admin = &7You shown &3{0}''s &7inventory!
+help_invsee = &7Open player's inventory
+invsee_admin = &7You shown &3{0}'s &7inventory!
 join_message = &8{ &a+ &8} &e-&a> &3{0}
-kick_prefix = &6Multi&5Commands &cYou''ve been kicked by an Administrator!
+help_kick = &7Kick players
+kick_prefix = &6Multi&5Commands &cYou've been kicked by an Administrator!
 leave_message = &8{ &c- &8} &c<&e- &3{0}
-list = &aYou have &e{0} &aplayers / &c{1} &aconnected:\n&7The &8[] &7symbols show custom name changed with &e/nick&7.
+help_list = &7Show connected players
+list = &aYou have &e{0} &aplayers / &c{1} &aconnected:\n&7The &8[] &7symbols show custom name changed with &e/nick&7.\n&7Click on player's name to teleport you to him.
+list_hover = &3Teleport to &e{0}
+help_nick = &7Change your online pseudonyme
 nickname_done = &7Your nickname has been set to &a{0}&7!
+help_ping = &7Show your latency
 ping_self = &7Your latency is {0}&7!
-ping_other = &3{0}''s &7latency is {1}&7!
+ping_other = &3{0}'s &7latency is {1}&7!
+help_plugins = &7Show server plugins
+help_reload = &7Reload files
 reload = &6MultiCommands &afiles are reloaded!
+help_serverinfo = &7Show server information
+help_setspawn = &7Place main spawn
+help_spawn = &7Teleport you to main spawn
 setspawn_done = &aMain spawn has been set to your location!
-spawn_error = &cThe main spawn hasn''t set / unreachable! Send that error on &e/helpop &ccommand!
-spawn_teleport = &aYou''ve been teleported to main spawn!
+spawn_error = &cThe main spawn hasn't set / unreachable! Send that error on &e/helpop &ccommand!
+spawn_teleport = &aYou've been teleported to main spawn!
+help_teleport = &7Teleport you to coordinates
 teleport_error = &cType &e/<tp|teleport> (<x><y><z>|<player>)&c!
 teleport_error_coordinates = &cType &e/<command> <X> <Y> <Z>&c!
 teleport_error_player_coordinates = &cType &e/<command> <player> <X> <Y> <Z>&c!
@@ -104,9 +133,11 @@ teleport_self_to_coordinates = &aYou''ve been teleported on &e{0}&a!
 teleport_player_to_coordinates = &eYou teleport &3{0} &eon &6{1}&e!
 teleport_player_to_player_by_admin = &5&lMulti&d&lCommands &8> &eYou''ve been teleported to &3{0}&e by an &cadministrator&e!
 teleport_player_to_coordinates_by_admin = &5&lMulti&d&lCommands &8> &eYou''ve been teleported on &6{0}&e by an &cadministrator&e!
+help_vanish = &7Manage your vanish-mode
 vanish_enabled_self = &7You toggle &aON &7your &6vanish&7!
 vanish_disabled_self = &7You toggle &cOFF &7your &6vanish&7!
-vanish_enabled_admin = &7You toggle &aON &b{0}''s &6vanish&7!
-vanish_disabled_admin = &7You toggle &cOFF &b{0}''s &6vanish&7!
+vanish_enabled_admin = &7You toggle &aON &b{0}'s &6vanish&7!
+vanish_disabled_admin = &7You toggle &cOFF &b{0}'s &6vanish&7!
 vanish_enabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &aON &eyour &6vanish&e!
 vanish_disabled_by_admin = &6Multi&5Commands &8> &eAn &cadministrator &etoggle &cOFF &eyour &6vanish&e!
+help_whois = &7Show player's information
