--- a/src/main/resources/lang/en.properties
+++ b/src/main/resources/lang/en.properties
@@ -25,6 +25,7 @@ afk_disabled_self = {prefix} &7You're not AFK
 help_alert = &7Send alert messages
 alert_prefix = &c&l-&4&l{ &f&lAlert &4&l}&c&l-
 alert_sent = {prefix} &7Your message has been sent.
+help_anvil = &7Open an anvil
 help_ban = &7Ban players
 ban_admin = {prefix} &e{0} &7has been &cbanned &7by&b{1} &7for &d{2}&7!
 ban_alert = {prefix} &eAn &c administrator &ebanned a player
@@ -38,6 +39,7 @@ help_clear = &7Clear your inventory
 clear_self = {prefix} &7Your inventory has been cleared!
 clear_by_admin = {prefix} &eAn &cadministrator &ehas clear your inventory!
 clear_admin = {prefix} &3{0}'s &7inventory has been cleared!
+help_compass = &7Send you compass bearing
 compass_loc = {prefix} &7Bearing: &e{0} &8(&7{1} degrees&8)
 help_craft = &7Open portable workbench
 death_message = &3{0} &7died!
@@ -101,6 +103,9 @@ join_message = &8{ &a+ &8} &e-&a> &3{0}
 help_kick = &7Kick players
 kick_broadcast = &cA player has been kicked by an administrator
 kick_prefix = {prefix} &cYou've been kicked by an Administrator!
+help_kickall = &7Kick all online players
+help_kill = &7Kill a player
+kill_done = {prefix} &7You kill &3{0}&7!
 leave_message = &8{ &c- &8} &c<&e- &3{0}
 help_list = &7Show connected players
 list = &aYou have &e{0} &aplayers / &c{1} &aconnected:\n&7The &8[] &7symbols show custom name changed with &e/nick&7.\n&7Click on player's name to teleport you to him.
@@ -129,7 +134,8 @@ teleport_self_to_coordinates = {prefix} &aYou''ve been teleported on &e{0}&a!
 teleport_player_to_coordinates = {prefix} &eYou teleport &3{0} &eon &6{1}&e!
 teleport_player_to_player_by_admin = {prefix} &eYou''ve been teleported to &3{0}&e by an &cadministrator&e!
 teleport_player_to_coordinates_by_admin = {prefix} &eYou''ve been teleported on &6{0}&e by an &cadministrator&e!
-unban_help = &7Unban banned player
+help_top = &7Teleport you to top Y at your location
+help_unban = &7Unban banned player
 unban_error = {prefix} &e{0} &chas'nt banned / already unbanned
 unban_done = {prefix} &e{0} &6are unbanned!
 unban_broadcast = {prefix} &eAn &cadministrator &eunban {0]!
