Build v 1.2 Adding Level command Adding LevelTab TabCompletion
Modifying Furnace command

--- a/src/main/resources/lang/en.properties
+++ b/src/main/resources/lang/en.properties
@@ -107,6 +107,13 @@ help_kickall = &7Kick all online players
 help_kill = &7Kill a player
 kill_done = {prefix} &7You kill &3{0}&7!
 leave_message = &8{ &c- &8} &c<&e- &3{0}
+help_level = &7Manage experiences
+level_add = {prefix} &7You &aadd &e{0} exp &7to you
+level_set = {prefix} &7You &cset &e{0} exp &7to you
+level_remove = {prefix} &7You &cremove &e{0} exp &7to you
+level_add_other = {prefix} &7You &aadd &e{0} exp &7to &b{1}
+level_set_other = {prefix} &7You &cset &e{0} exp &7to &b{1}
+level_remove_other = {prefix} &7You &cremove &e{0} exp &7to &b{1}
 help_list = &7Show connected players
 list = &aYou have &e{0} &aplayers / &c{1} &aconnected:\n&7The &8[] &7symbols show custom name changed with &e/nick&7.\n&7Click on player's name to teleport you to him.
 list_hover = &3Teleport to &e{0}
