--- a/src/main/resources/lang/fr.properties
+++ b/src/main/resources/lang/fr.properties
@@ -107,6 +107,13 @@ help_kickall = &7Permet d'expulser tout les joueurs en ligne
 help_kill = &7Permet de tuer un joueur
 kill_done = {prefix} &7Vous avez tué &3{0}&7!
 leave_message = &8{ &c- &8} &c<&e- &3{0}
+help_level = &7Permet de modifier l'expérience
+level_add = {prefix} &7Vous vous êtes &aajouté &e{0} exp
+level_set = {prefix} &7Vous vous êtes &cdéfinit &e{0} exp
+level_remove = {prefix} &7Vous vous êtes &cretiré &e{0} exp
+level_add_other = {prefix} &7Vous avez &aajouté &e{0} exp &7à &b{1}
+level_set_other = {prefix} &7Vous avez &cdéfinit &e{0} exp &7à &b{1}
+level_remove_other = {prefix} &7Vous avez &cretiré &e{0} exp &7à &b{1}
 help_list = &7Permet d'afficher les joueurs en ligne
 list = &aVous avez &e{0} &ajoueurs sur &c{1} &aconnectés:\n&7Les crochets &8[] &7vous affichent le pseudo modifié avec &e/nick&7.\n&7Clicker sur le pseudo vous téléportera vers le joueur.
 list_hover = &3Se téléporter vers &e{0}
