Build v 1.4.3 List command fixed SendCommandMessage and SendHoverMessage on MessengerUtils fixed

--- a/src/main/resources/lang/fr.properties
+++ b/src/main/resources/lang/fr.properties
@@ -115,7 +115,7 @@ level_add_other = {prefix} &7Vous avez &aajouté &e{0} exp &7à &b{1}
 level_set_other = {prefix} &7Vous avez &cdéfinit &e{0} exp &7à &b{1}
 level_remove_other = {prefix} &7Vous avez &cretiré &e{0} exp &7à &b{1}
 help_list = &7Permet d'afficher les joueurs en ligne
-list = &aVous avez &e{0} &ajoueurs sur &c{1} &aconnectés:\n&7Les crochets &8[] &7vous affichent le pseudo modifié avec &e/nick&7.\n&7Clicker sur le pseudo vous téléportera vers le joueur.
+list = &aVous avez &e{0} &ajoueurs sur &c{1} &aconnectés:\n&7Les crochets &8[] &7vous affichent le pseudo modifié avec &e/nick&7.\n&7Cliquer sur le pseudo vous téléportera vers le joueur.
 list_hover = &3Se téléporter vers &e{0}
 help_mute = &7Permet de rendre muet un joueur
 mute_chat = {prefix} &cVous avez été rendu muet pour &e{0}&c!
