--- a/src/main/resources/lang/fr.properties
+++ b/src/main/resources/lang/fr.properties
@@ -12,7 +12,7 @@ modo_chat_prefix = >
 no_console_cmd = {prefix} <red>La commande <yellow>/<command> <red>est réservée aux joueurs !
 no_console_cmd_without_args = {prefix} <red>La commande <yellow>/<command> <red>sans <yellow><joueur> <red>est réservée aux joueurs !
 not_a_player = {prefix} <red>Le joueur <yellow>{0} <red>n''est pas connecté / pas un joueur !
-no_perm = {prefix} <red>Vous n''avez pas la permission d''utiliser cette commande !
+no_perm = {prefix} <red>Vous n''avez pas la permission d''utiliser la commande <yellow>/<command> <red>!
 no_perm_to_other = {prefix} <red>Vous n''avez pas la permission d''utiliser cette commande sur un autre joueur !
 no_args = {prefix} <red>La commande <yellow>/<command> <red>s''utilise avec des arguments!\n<yellow>- /<command> {0}
 cmd_invalid_args = {prefix} <red>Arguments invalides !\n<yellow>- /<command> {0}
